# multi-verse-mars-rover

./: Dockerfile  README.md  input_example.txt  pyproject.toml  requirements.txt
multi_verse_mars_rover/: main.py  rover.py
tests/acceptance/: test_acceptance.py
tests/unit/: test_rover.py  test_rover_has_gone_off_grid.py
