[tool.poetry]
name = "multi-verse-mars-rover"
version = "0.1.0"
description = ""
authors = ["Joe Wood <joe@nettlemedia.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
